View All Controller Added

--- a/AdvMasterDetails/Views/Home/Index.cshtml
+++ b/AdvMasterDetails/Views/Home/Index.cshtml
@@ -25,6 +25,9 @@
                 </td>
             </tr>
         </table>
+        <div style="padding:10px 0; text-align:right">
+            <input id="showall" type="button" value="Show Orders" class="btn btn-info" style="padding:10px 20px"  href="@Url.Action("ShowAll", "Home")"/>
+        </div>
     </div>
     <div class="details">
         <h2>
