Lil Bit Edited Only Edit and Delete Not Working

--- a/AdvMasterDetails/Views/Home/ShowAll.cshtml
+++ b/AdvMasterDetails/Views/Home/ShowAll.cshtml
@@ -1,5 +1,5 @@
 ﻿@using AdvMasterDetails.Models
-@model IEnumerable<Orders>
+@model List<Orders>
 @using GridMvc.Html
 @{
     ViewBag.Title = "Orders";
@@ -9,37 +9,32 @@
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/gridmvc.min.js"></script>
-
+<div style="padding:10px 0; text-align:right">
+    <input id="addnew" type="button" value="Add Order" class="btn btn-info" style="padding:10px 20px"  onClick='redirectOnClick()'/>
+    <script>
+        function redirectOnClick(){
+            document.location ='Index';
+        }
+    </script>
+</div>
 <div class ="Code-Cut">
     @Html.Grid(Model).Columns(Column =>
-    {
+{
     Column.Add(c => c.OrderId).Titled("Order Id").Filterable(true);
     Column.Add(c=>c.OrderNo).Titled("Order No").Filterable(true);
     Column.Add(c=>c.OrderDate).Titled("Order Date").Filterable(true);
     Column.Add(c=>c.Description).Titled("Order Details").Filterable(true);
 
-        Column.Add()
-            .Encoded(false)
-            .Sanitized(false)
-            .SetWidth(30)
-            .RenderValueAs(o => Html.ActionLink("Edit", "Edit", new {id = o.OrderId}));
-    }).WithPaging(10).Sortable(true)
+    Column.Add()
+        .Encoded(false)
+        .Sanitized(false)
+        .SetWidth(30)
+        .RenderValueAs(o => Html.ActionLink("Edit", "Edit", new {id = o.OrderId}));
+    Column.Add()
+        .Encoded(false)
+        .Sanitized(false)
+        .SetWidth(30)
+        
+        .RenderValueAs(o => Html.ActionLink("Delete", "Delete", new { id = o.OrderId}));
+}).WithPaging(10).Sortable(true)
 </div>
-
-@*<table>
-    <tr>
-        <th>  Order-Id     </th>
-        <th>  Order-No     </th>
-        <th>  Order-Date   </th>
-        <th>  Description  </th>
-    </tr>
-    @foreach(Orders Order in Model)
-    {
-        <tr>
-            <td>@Order.OrderId</td>  
-            <td>@Order.OrderNo</td>
-            <td>@Order.OrderDate</td> 
-            <td>@Order.Description</td> 
-        </tr>
-    }
-</table>*@
