--- a/AdvMasterDetails/Views/Home/Index.cshtml
+++ b/AdvMasterDetails/Views/Home/Index.cshtml
@@ -25,9 +25,6 @@
                 </td>
             </tr>
         </table>
-        <div style="padding:10px 0; text-align:right">
-            <input id="showall" type="button" value="Show Orders" class="btn btn-info" style="padding:10px 20px"  href="@Url.Action("ShowAll", "Home")"/>
-        </div>
     </div>
     <div class="details">
         <h2>
@@ -73,6 +70,14 @@
         </div>
         <div style="padding:10px 0; text-align:right">
             <input id="submit" type="button" value="Save Order" class="btn btn-warning" style="padding:10px 20px" />
+        </div>
+        <div style="padding:10px 0; text-align:right">
+            <input id="show" type="button" value="Show Orders" class="btn btn-warning" style="padding:10px 20px" onClick='redirectOnClick()' />
+            <script>
+                function redirectOnClick(){
+                    document.location ='ShowAll';
+                }
+            </script>
         </div>
     </div>
 </div>
