--- a/AdvMasterDetails/Views/Home/Index.cshtml
+++ b/AdvMasterDetails/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@
             <input id="show" type="button" value="Show Orders" class="btn btn-warning" style="padding:10px 20px" onClick='redirectOnClick()' />
             <script>
                 function redirectOnClick(){
-                    document.location ='ShowAll';
+                    document.location ="ShowAll";
                 }
             </script>
         </div>
