--- a/AdvMasterDetails/Views/Home/ShowAll.cshtml
+++ b/AdvMasterDetails/Views/Home/ShowAll.cshtml
@@ -8,15 +8,17 @@
 <link href="~/Content/Gridmvc.css" rel="stylesheet" />
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>
 <script src="~/Scripts/gridmvc.min.js"></script>
 <div style="padding:10px 0; text-align:right">
     <input id="addnew" type="button" value="Add Order" class="btn btn-info" style="padding:10px 20px"  onClick='redirectOnClick()'/>
     <script>
         function redirectOnClick(){
-            document.location ='Index';
+            document.location ="Index";
         }
     </script>
 </div>
+
 <div class ="Code-Cut">
     @Html.Grid(Model).Columns(Column =>
 {
@@ -24,92 +26,17 @@
     Column.Add(c=>c.OrderNo).Titled("Order No").Filterable(true);
     Column.Add(c=>c.OrderDate).Titled("Order Date").Filterable(true);
     Column.Add(c=>c.Description).Titled("Order Details").Filterable(true);
+    Column.Add()
+        .Encoded(false)
+        .Sanitized(false)
+        .SetWidth(30)
+        .RenderValueAs(o => Html.ActionLink("Edit", "Edit", new { id = o.OrderId }));
+    Column.Add()
+        .Encoded(false)
+        .Sanitized(false)
+        .SetWidth(30)
 
-    Column.Add()
-        .Encoded(false)
-        .Sanitized(false)
-        .SetWidth(30)
-        .RenderValueAs(o => Html.ActionLink("Edit", "Edit", new {id = o.OrderId}));
-    Column.Add()
-        .Encoded(false)
-        .Sanitized(false)
-        .SetWidth(30)
-        
-        .RenderValueAs(o => Html.ActionLink("Delete", "Delete", new { id = o.OrderId}));
+        .RenderValueAs(o => Html.ActionLink("Delete", "Delete", new { id = o.OrderId }));
 }).WithPaging(10).Sortable(true)
+
 </div>
-
-@*<script>
-        $("#LoadingStatus").html("Loading....");
-        $.get("/Home/ShowAll", null, DataBind);
-        function DataBind(Orders) {
-            var SetData = $("#SetStudentList");
-            for (var i = 0; i < StudentList.length; i++) {
-                var Data = "<tr class='row_" + StudentList[i].StudentId + "'>" +
-                    "<td>" + StudentList[i].StudentId + "</td>" +
-                    "<td>" + StudentList[i].StudentName + "</td>" +
-                    "<td>" + StudentList[i].Email + "</td>" +
-                    "<td>" + StudentList[i].DepartmentName + "</td>" +
-                    "<td>" + "<a href='#' class='btn btn-warning' onclick='EditStudentRecord(" + StudentList[i].StudentId + ")' ><span class='glyphicon glyphicon-edit'></span></a>" + "</td>" +
-                    "<td>" + "<a href='#' class='btn btn-danger' onclick='DeleteStudentRecord(" + StudentList[i].StudentId + ")'><span class='glyphicon glyphicon-trash'></span></a>" + "</td>" +
-                    "</tr>";
-                SetData.append(Data);
-                $("#LoadingStatus").html(" ");
-
-            }
-        }
-
-
-        //Show The Popup Modal For Edit Student Record
-
-        function EditStudentRecord(StudentId) {
-            var url = "/Home/GetStudentById?StudentId=" + StudentId;
-            $("#ModalTitle").html("Update Student Record");
-            $("#MyModal").modal();
-            $.ajax({
-                type: "GET",
-                url: url,
-                success: function (data) {
-                    var obj = JSON.parse(data);
-                    $("#StuId").val(obj.StudentId);
-                    $("#StuName").val(obj.StudentName);
-                    $("#Email").val(obj.Email);
-                    $("#DropDwn option:selected").text(obj.tblDepartment.DepartmentName);
-                    $("#DropDwn option:selected").val(obj.DepartmentId);
-
-                }
-            })
-        }
-
-        $("#SaveStudentRecord").click(function () {
-            var data = $("#SubmitForm").serialize();
-            $.ajax({
-                type: "Post",
-                url: "/Home/SaveDataInDatabase",
-                data: data,
-                success: function (result) {
-                    alert("Success!..");
-                    window.location.href = "/Home/index";
-                    $("#MyModal").modal("hide");
-
-                }
-            })
-        })
-
-        //Show The Popup Modal For DeleteComfirmation
-        var DeleteStudentRecord = function (StudentId) {
-            $("#StuId").val(StudentId);
-            $("#DeleteConfirmation").modal("show");
-        }
-        var ConfirmDelete = function () {
-            var StuId = $("#StuId").val();
-            $.ajax({
-                type: "POST",
-                url: "/Home/DeleteStudentRecord?StudentId=" + StuId,
-                success: function (result) {
-                    $("#DeleteConfirmation").modal("hide");
-                    $(".row_" + StuId).remove();
-                }
-            })
-        }
-    </script>*@
